# ai_lecture_notes

./: .env.example  .gitignore  PHASE_5_IDEAS.md  PROJECT_STATE.md  README.md  agents-guide.md  pyproject.toml
backend/: .env.example  .gitignore  README.md  requirements.txt  test_request.json
backend/alembic/: env.py
backend/alembic/versions/: b9e227681a52_initial_tables_videos_and_processing_.py
backend/app/: __init__.py  main.py  models.py
backend/app/agents/: __init__.py  orchestrator.py
backend/app/api/: __init__.py  history.py  presets.py
backend/app/database/: __init__.py  connection.py  models.py
backend/app/tools/: __init__.py  summarizer.py  tool_extractor.py  youtube_tool.py
frontend/: BROWSER_COMPATIBILITY.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/export-pdf/: route.ts
frontend/src/app/history/: history-table.tsx  loading.tsx  page.tsx
frontend/src/app/history/[id]/: page.tsx
frontend/src/components/: preset-videos.tsx
frontend/src/components/ui/: animated-theme-toggler.tsx  background-beams.tsx  dot-pattern.tsx  drawer.tsx  magic-card.tsx  modal.tsx  progress-tracker.tsx  thinking-indicator.tsx
frontend/src/hooks/: useEventSource.ts
src/ai_lecture_notes/: crew.py  main.py
src/ai_lecture_notes/config/: agents.yaml  tasks.yaml
src/ai_lecture_notes/tools/: __init__.py  custom_tool.py
