[project]
name = "ai_lecture_notes"
version = "0.1.0"
description = "ai_lecture_notes using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "youtube-transcript-api>=1.1.0",
]

[project.scripts]
ai_lecture_notes = "ai_lecture_notes.main:run"
run_crew = "ai_lecture_notes.main:run"
train = "ai_lecture_notes.main:train"
replay = "ai_lecture_notes.main:replay"
test = "ai_lecture_notes.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
