[project]
name = "ai_lecture_notes"
version = "0.1.0"
description = "AI agent for analyzing YouTube lecture content"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "youtube-transcript-api>=1.1.0",
    "yt-dlp>=2023.11.14",
    "langchain-text-splitters>=0.0.1",
]

[project.scripts]
ai_lecture_notes = "ai_lecture_notes.main:run"
run_crew = "ai_lecture_notes.main:run"
train = "ai_lecture_notes.main:train"
replay = "ai_lecture_notes.main:replay"
test = "ai_lecture_notes.main:test"

[tool.setuptools]
packages = ["ai_lecture_notes"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.crewai]
type = "crew"
